<resources>
    <string name="app_name">BangladeshSwedenPolytechnic</string>
    <string name="title_activity_nav">BSPI CST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bangladesh Sweden Polytechnic Institute</string>
    <string name="nav_header_subtitle">Kaptai, Rangamati Hill Tracks \n📫 4533 \n📞 03529-56251 \n📨 principal.bspi@yahoo.com </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="aboutBspi">Bangladesh Sweden Polytechnic Institute (BSPI) is one of the famous and well reputed technical educational institute in Bangladesh. It was established at Kaptai under Rangamati Hill Tracts in 1962 by the initiative of Swedish Government as Swedish-Pakistan Institute of Technology. After emergence of Bangladesh, the institute renamed as Bangladesh Sweden Polytechnic Institute. The total campus area is 30.95 acre. BSPI is one of the Government institute under ministry of education through Directorate of technical education while the academic program is controlled by the Bangladesh Technical Education Board (BTEB). It offers 4-years (8 Semester) Diploma-in-Engineering courses. It has qualified teachers, workshops and laboratories with modern equipment. About 2300 students are now studying in different technical fields of this institute. </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal">Principal</string>
    <string name="vice_principal">Vice Principal</string>
    <string name="academic_council">Academic Council</string>
    <string name="administrative_council">Administrative Council</string>
    <string name="exam_control_section">Exam Control Section</string>
    <string name="official_staff_list">Official Staff List</string>
    <string name="bspi_student_panel">BSPI Student Panel</string>
    <string name="online_campus">Online Campus</string>
    <string name="library">Library</string>
    <string name="admission_info">Admission Info</string>
    <string name="job_placement_cell">Job Placement Cell</string>
    <string name="probidhan">Probidhan</string>
    <string name="industrial_linkages">Industrial Linkages</string>
    <string name="academic_calender">Academic Calender</string>
    <string name="scholarship">Scholarship</string>
    <string name="short_course">Short Course</string>
    <string name="computer_department">Computer Department</string>
    <string name="automobile_department">Automobile Department</string>
    <string name="civil_wood_department">Civil (wood) Department</string>
    <string name="construction_department">Construction Department</string>
    <string name="electrical_department">Electrical Department</string>
    <string name="mechanical_department">Mechanical Department</string>
    <string name="non_tech_department">Non-Tech Department</string>
    <string name="notice">Notice</string>
    <string name="general_notice">General Notice</string>
    <string name="student_notice">Student Notice</string>
    <string name="tender_notice">Tender Notice</string>
    <string name="about_bspi">About BSPI</string>
    <string name="message_from_principal">Message From Principal</string>
    <string name="message_from_vice_principal">Message From Vice Principal</string>
    <string name="history_background">History Background</string>
    <string name="mission_vission">Mission Vision</string>
    <string name="citizen_charter">Citizen Charter</string>
    <string name="hostel">Hostel</string>
    <string name="organogram">Organogram</string>
    <string name="official_facebook_page">Official Facebook Page</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="contact_us">Contact Us</string>
    <string name="department">Department</string>
    <string name="academic">Academic</string>
    <string name="administration">Administration</string>
    <string name="about_mohammad_abdul_matin_howlader">Home District : Rangamati\nEducation : B.Sc. in Technical Education(Civil Engineering)\nGovt. Job Joining Date : 1993/02/16\nCurrent Institute Joinning Date : 2019/05/30\nMobile : +8801827557761\nEmail : principal.bspi@yahoo.com</string>
    <string name="about_academic_council"></string>
    <string name="_1_the_academic_council_shall_consist_of_the_principal_vice_principal_departmental_heads_representative_of_teachers_ideb_amp_staffs_association_hostel_super_registrar_member_secretary_n_2_the_function_of_the_council_shall_be_to_initiate_and_formulate_all_educational_policies_governing_the_operation_of_the_institute_n_3_it_s_function_shall_also_be_to_determine_policies_concerning_n_t_a_standards_qualifications_and_procedure_relating_to_the_admission_of_students_n_t_b_students_conduct_discipline_n_tc_students_academic_standards_and_requirements_n_t_d_institute_s_examinations_and_promotions"><![CDATA[1.The academic council shall consist of the  Principal, Vice-Principal, Departmental Heads, Representative of Teachers, IDEB & Staffs association, Hostel Super, Registrar (Member Secretary). \n\n 2.The function of the council shall be to initiate and formulate all educational policies governing the operation of the Institute.\n\n 3.It\'s function shall also be to determine policies concerning,\n\n\n \t a.Standards, qualifications, and procedure relating to the admission of students.\n\n \t b.Students conduct, Discipline.\n\n\t c.Students academic standards and requirements.\n\n \t d.Institute’s examinations and promotions.]]></string>
    <string name="the_administrative_council_shall_consist_of_the_principal_vice_principal_all_departmental_head_security_officer_representative_of_teachers_ideb_and_staffs_association_hostel_super_registrar_and_office_superintendent_member_secretary_n_nthe_principal_presides_at_all_council_meetings_n_nthe_council_may_recommend_to_the_principal_such_rules_and_regulations_as_will_facilitate_the_administrative_operations_of_the_institute_bring_about_closer_correlation_of_its_various_departments_and_divisions_and_improve_the_quality_of_all_phases_of_its_work_n_n_the_council_may_include_if_necessary_representative_from_other_areas_of_activities">The administrative council shall consist of the Principal, Vice Principal, All Departmental Head, Security officer, Representative of Teachers, IDEB and Staffs association, Hostel super, Registrar and Office Superintendent (Member Secretary).\n\nThe Principal presides at all council meetings.\n\nThe Council may recommend to the Principal such rules and regulations as will facilitate the administrative operations of the Institute, bring about closer correlation of its various departments and divisions, and improve the quality of all phases of its work. \n\n The council may include, if necessary, representative from other areas of activities.</string>
    <string name="Tanzina">Section : Principal office \nHome District : Cumilla \nEducation : Diploma in Health Technology \nGovt. Job Joining Date : 2021-03-18 \nCurrent Position Joinning Date : 2021-03-18 \nCurrent Institute Joinning Date : 2021-03-27 \nMobile : +8801767566040 \nEmail : tanzina.iht@gmail.com</string>
    <string name="khirul">Section : Register section \nHome District : Narayanganj Education : B.Sc. in EEE Govt. Job Joining Date : 2018-11-01 Current Position Joinning Date : 2018-11-01 Current Institute Joinning Date : 2018-11-01 Mobile : 01965963417 Email : khirul.eee@Gmail.com</string>
</resources>